# cookiecutter-python

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  cookiecutter.json  setup.cfg  tox.ini
.github/workflows/: main.yaml
hooks/: post_gen_project.py
tests/: test_generation.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .gitlab-ci.yml  Pipfile  README.md  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: main.yaml
{{cookiecutter.project_slug}}/docs/: development.md
