[metadata]
name = cookiecutter_tendata_python
version = 0.2.0.dev1
author = huagang517
author_email = huagang517@126.com
description = A tendata's cookiecutter simple template for general python project.
keywords = ['cookiecutter', 'tendata','template', 'package']
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py
