[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.project_description }}
keywords = {{ cookiecutter.project_name }}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: {{ cookiecutter.python_version }}

[options]
python_requires >= {{ cookiecutter.python_version }}
packages= find:

[options.packages.find]
exclude =
    tests*
    docs

[flake8]
max-line-length = 120
exclude =
    build
    .tox
    .git

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py